--- a/website/pages/templates/pages/contact.html
+++ b/website/pages/templates/pages/contact.html
@@ -14,14 +14,20 @@
 			
 			<p>To contact Rocksoc, either send us an e-mail or talk to us in the pub. Event promoters please make sure to address your e-mail to the events officer, or it probably won’t get looked at.</p>
 			
-			<p>The committee may be contacted via: <a href="mailto:soc-rocksoc-comittee@lists.cam.ac.uk" target="_top" class="paragraph_link">soc-rocksoc-comittee@lists.cam.ac.uk</a></p>
+			<p>The committee may be contacted via <a href="mailto:soc-rocksoc-comittee@lists.cam.ac.uk" target="_top" class="paragraph_link">soc-rocksoc-comittee@lists.cam.ac.uk</a></p>
 			
 			<h3>Keeping in touch</h3>
 			
 			<p>Want to make sure you don't miss anything alternative? The best way is to join us on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a>
 			where you'll find all the latest information. You can also join our mailing list. To do so visit <a href="https://lists.cam.ac.uk/mailman" class="paragraph_link">lists.cam.ac.uk/mailman</a>
 			and search for 'rocksoc'.<p>
-			<!--<form role="form" action="" method="post">
+			
+			<p>We only store your name and e-mail address for the purpose of contacting you about upcoming events and news in the society. Please consult our
+			<a href="/privacy_notice" class="paragraph_link">privacy notice</a> for more details.</p>
+			
+			<!--<p>The controller for your personal information is the Cambridge University Rock Society. The person responsible for data protection within our society is the secretary who can be contacted via 
+			<a href="mailto:soc-rocksoc-comittee@lists.cam.ac.uk" target="_top" class="paragraph_link">soc-rocksoc-comittee@lists.cam.ac.uk</a>. Please address any emails to the secretary.</p>
+			<form role="form" action="" method="post">
 				{% csrf_token %}
 				{{ form.as_p }}
 				<button type="submit">Submit</button>
