--- a/website/pages/templates/pages/news.html
+++ b/website/pages/templates/pages/news.html
@@ -10,7 +10,8 @@
 				<h1 class="page_title">NEWS</h1>
 			</div>
 			
-			<p>Here you can find out about some of the goings-on in RockSoc. For the most up-to-date information join us on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook.</a></p>
+			<p>Here you can find out about some of the goings-on in RockSoc. For the most up-to-date information join us on 
+			<a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook.</a></p>
 			
 			<br>
 			
