--- a/website/pages/templates/pages/quote.html
+++ b/website/pages/templates/pages/quote.html
@@ -10,10 +10,13 @@
 				<h1 class="page_title">QUOTE!</h1>
 			</div>
 			
-			{% if not quotes.has_previous %}
+			<!--{% if not quotes.has_previous %}
 				<p>There are some things that need writing down for the benefit of future generations. Those that are un-minuteable for whatever reason can be found here. Say 
 				something outrageous at one of our events and you might find yourself listed below.</p>
-			{% endif %}
+			{% endif %}-->
+			
+			<p>There are some things that need writing down for the benefit of future generations. Those that are un-minuteable for whatever reason can be found here. Say 
+				something outrageous at one of our events and you might find yourself listed below.</p>
 			
 			<div>			
 				<p align="right">
