--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -12,20 +12,27 @@
 			
 			<h3>What is WUS?</h3>
 			
-			<p>Wake Up Screaming, or WUS, is Cambridge RockSoc's own club night, which runs every third Friday of the month at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>,
-			both in and out of term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge. Entry is £3 for <a href="/about" class="paragraph_link">members</a> and £4 for non-members.<p>
+			<p>Wake Up Screaming, or WUS, is Cambridge RockSoc's own club night, which runs every third Friday of the month 
+			at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, both in and out of 
+			term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge. 
+			Entry is £3 for <a href="/about" class="paragraph_link">members</a> and £4 for non-members.<p>
 
 			<h3>DJing at WUS</h3>
 
-			<p>Fancy trying your hand at DJing? Contact the WUS officer who will be able to provide further information. It doesn't matter if you have no experience, we will put you on first set and if we 
-			like you we will ask you back. You would be required to provide your own music, and usually something to play it on, e.g. a laptop. We are always keen to have new DJs!</p>
+			<p>Fancy trying your hand at DJing? Contact the WUS officer who will be able to provide further information. It 
+			doesn't matter if you have no experience, we will put you on first set and if we like you we will ask you back. 
+			You would be required to provide your own music, and usually something to play it on, e.g. a laptop. We are 
+			always keen to have new DJs!</p>
 
 			<h3>What do we play?</h3>
 
-			<p>The remit for WUS is to play rock and alternative music that isn’t otherwise found in Cambridge. We try to maintain a mixture of interesting and esoteric music people might not 
-			have heard before as well as things people will dance to. As such, we try to encourage DJs to play a mixture of things they think will be danceable, that people will enjoy listening 
-			to, and things they find interesting. About the only big thing we try to avoid is music that really isn’t rock or that is widely played elsewhere in Cambridge, for example at 
-			<a href="https://www.facebook.com/TheCallingCambridge/" class="paragraph_link">The Calling</a>, or whatever the current Indie-based night is.</p>
+			<p>The remit for WUS is to play rock and alternative music that isn’t otherwise found in Cambridge. We try to 
+			maintain a mixture of interesting and esoteric music people might not have heard before as well as things people 
+			will dance to. As such, we try to encourage DJs to play a mixture of things they think will be danceable, that 
+			people will enjoy listening to, and things they find interesting. About the only big thing we try to avoid is 
+			music that really isn’t rock or that is widely played elsewhere in Cambridge, for example at 
+			<a href="https://www.facebook.com/TheCallingCambridge/" class="paragraph_link">The Calling</a>, or whatever the 
+			current Indie-based night is.</p>
 			
 			<h3>Upcoming WUS Events</h3>
 			
@@ -63,7 +70,9 @@
 								<td colspan="2"><br>
 									<table>
 										<tr>
-											<td style="width:400px"><h4>{{ event.date | date:"l jS F Y" }}<br>{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}<br>@ {{ event.event_location }}</h4></td>
+											<td style="width:400px"><h4>{{ event.date | date:"l jS F Y" }}<br>
+											{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}
+											<br>@ {{ event.event_location }}</h4></td>
 											
 										</tr>
 									</table>
