--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -17,17 +17,20 @@ body {
 }
 
 h1 {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 	font-family: Do Hyeon, sans-serif;
 }
 
 h2 {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 	font-family: /*Rock Salt*/ Do Hyeon;
 }
 
 h3 {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 	font-family: /*Rock Salt Arial*/ Do Hyeon, sans-serif;
 	/*display: inline;*/
 	font-size: 16pt;
@@ -55,7 +58,8 @@ span {
 }
 
 a {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 	text-decoration: none;
 }
 
@@ -69,11 +73,13 @@ a#event_name_list {
 }
 
 a#event_name_list:hover {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 }
 
 a#event_name_list_big {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 	text-decoration: none;
 }
 
@@ -90,6 +96,7 @@ html {
 	padding-top: 3%;
 	padding-bottom: 3%;
 	padding-left: 5%;
+	transition: 0.4s;
 }
 
 .side_title:hover {
@@ -555,8 +562,8 @@ individual sections separately. For mobile there is padding since the individual
 	.welcome {
 		grid-column: 1 / 2;
 		-ms-grid-column: 1;
-		grid-row: 1 / 3;
-		-ms-grid-row-span: 2;
+		grid-row: 1 / 4;
+		-ms-grid-row-span: 3;
 		padding-left: 6%;
 		padding-right: 6%;
 		padding-top: 3%;
@@ -570,7 +577,7 @@ individual sections separately. For mobile there is padding since the individual
 			grid-column: 1 / 2;
 			-ms-grid-column: 1;
 			grid-row: 1 / 3;
-			-ms-grid-row-span: 2;
+			-ms-grid-row-span: 3;
 			padding-left: 6%;
 			padding-right: 6%;
 			padding-top: 3%;
@@ -593,6 +600,17 @@ individual sections separately. For mobile there is padding since the individual
 		-ms-grid-column: 2;
 		grid-row: 2;
 		-ms-grid-row: 2;
+		padding-left: 8%;
+		padding-right: 8%;
+		padding-top: 3%;
+		padding-bottom: 3%;
+	}
+	
+	.gallery {
+		grid-column: 2;
+		-ms-grid-column: 2;
+		grid-row: 3;
+		-ms-grid-row: 3;
 		padding-left: 8%;
 		padding-right: 8%;
 		padding-top: 3%;
@@ -659,7 +677,8 @@ individual sections separately. For mobile there is padding since the individual
 .topnav .page_link {
 	/*float: left;*/
 	/*display: block;*/
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.7);
 	/*text-align: center;*/
 	padding: 14px;
 	padding-top: 0px;
@@ -667,6 +686,10 @@ individual sections separately. For mobile there is padding since the individual
 	text-decoration: none;
 	font-size: /*16px*/ 24px;
 	font-family: /*Rock Salt*/ Do Hyeon;
+	transition: 0.4s;
+	background-image: url("images/topnav_highlight_transparent.png");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 	/*border-right-style: solid;
 	border-right-width: 1px;*/
 }
@@ -928,7 +951,8 @@ table#event_list:hover {
 @media screen and (min-width: 600px) {
 	.event_window_small {
 		/*width: 100%;*/
-		height: 450px;
+		/*height: 450px;*/
+		height: 170px;
 		overflow: auto;
 		visibility: hidden;
 		/*margin-right: -18px;*/
@@ -936,7 +960,8 @@ table#event_list:hover {
 	
 	.event_window {
 		/*width: 100%;*/
-		height: 550px;
+		/*height: 550px;*/
+		height: 260px;
 		overflow: auto;
 		visibility: hidden;
 		/*margin-right: -18px;*/
@@ -990,6 +1015,7 @@ img#scroll_up_small:hover {
 
 img#event_img:hover {
 	opacity: 0.5;
+	transition: 0.3s;
 }
 
 .event_img_big {
@@ -999,7 +1025,8 @@ img#event_img:hover {
 }
 
 .paragraph_link {
-	color: white;
+	/*color: white;*/
+	color: rgba(250,250,250,0.8);
 	text-decoration: none;
 }
 
@@ -1131,4 +1158,139 @@ ol#constitution li{
 		padding-right:6%;
 		padding-bottom:6%;
 	}
+}
+
+/*START OF GALLERY CSS*/
+
+.row > .column {
+  padding: 0 8px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Create four equal columns that float next to eachother */
+.column {
+  float: left;
+  width: 23%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  /*z-index: 1;*/
+  padding-top: 50px;
+  /*padding-bottom: 100px;*/
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  /*background-color: #fefefe;*/
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  max-width: 1200px;
+  /*max-height: 300px;*/
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: url("images/metalhand5.png") 10 0, pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: url("images/metalhand5.png") 10 0, pointer;
+  position: absolute;
+  /*top: 50%;*/
+  top: 420px;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  cursor: url("images/metalhand5.png") 10 0, pointer;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+/*img.demo {
+  opacity: 0.6;
+}*/
+
+.active,
+.demo:hover {
+  opacity: 1;
+  cursor: url("images/metalhand5.png") 10 0, pointer;
+}
+
+img.hover-shadow {
+	transition: 0.3s;
+}
+
+.hover-shadow:hover {
+	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+	opacity: 0.5;
+	cursor: url("images/metalhand5.png") 10 0, pointer;
 }
