changed homepage and horizontal dividers

--- a/website/pages/templates/pages/about.html
+++ b/website/pages/templates/pages/about.html
@@ -36,7 +36,7 @@
 			go independent!</p>
 			
 			<h3>How can I join?</h3>
-			<p>Joining is cheap and easy. Membership is £5 for life (quite literally) and gets you the following benefits:</p>
+			<p>Joining is cheap and easy. Membership is £5 for life and gets you the following benefits:</p>
 			
 			<ul style="color:gray;list-style-type:disc">
 				<li>cheaper entry to Wake Up Screaming (£3 instead of £4)</li>
