--- a/website/pages/templates/pages/events.html
+++ b/website/pages/templates/pages/events.html
@@ -27,7 +27,8 @@
 				<img src="{% static 'pages/images/arrow_up.png' %}" style="width:20px;display:block;margin:auto;padding-bottom:10px" id="scroll_up">
 				
 				
-				<hr>
+				<!--<hr>-->
+				<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
 				
 			<div class="event_window">
 				<div class="event_window_content">
@@ -192,7 +193,10 @@
 				</div>
 			</div>
 			
-			<hr>
+			<br>
+			
+			<!--<hr>-->
+			<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
 			
 			<img src="{% static 'pages/images/arrow_down.png' %}" style="width:20px;display:block;margin:auto;padding-top:10px" id="scroll_down">
 			
