--- a/website/pages/templates/pages/news.html
+++ b/website/pages/templates/pages/news.html
@@ -15,13 +15,14 @@
 			
 			<br>
 			
-			<hr>
+			<!--<hr>-->
+			<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
 			
 				<div class="mobile_hide_600">
 				
 					{% for news in news %}
 				
-						<br>
+						<!--<br>-->
 						
 						<!--<table style="width:100%;border-collapse:collapse">
 							<tr>
@@ -38,7 +39,10 @@
 						
 						<br>
 						
-						<hr>
+						<!--<hr>-->
+						<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
+						
+						<!--<br>-->
 					
 					{% endfor %}
 				
