--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -44,14 +44,14 @@
 			
 			
 			<!--<div class="mobile_hide_600">-->
+			
+			<!--
 				<div class="side_title_backing_wus_small" style="width:45%">
 					<p class="sub_heading_welcome"><a href="/wus" class="paragraph_link">Wake Up Screaming</a></p>
 				</div>
 				
 				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. 
 				If you are interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
-
-				<!--<p><a href="/events">Pub meets</a></p>-->
 				
 				<div class="side_title_backing" style="width:45%">
 					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">Pub Meets</a></p>
@@ -60,20 +60,14 @@
 				<p>We meet weekly on a Thursday at a random pub in Cambridge, hailed as “RockSoc on tour”. To find out where our next pub meet is, keep an eye on 
 				the <a href="/events" class = "paragraph_link">events</a> page.</p>
 				
-				<!--hailed as “RockSoc on tour”-->
-				
-				<!--<div class="side_title_backing" style="width:45%">
-					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">GIGS</a></p>
-				</div>-->
-				
-				<!--<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>-->
-
 				<div class="side_title_backing_wus_small" style="width:45%">
 					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">Gigs and Other Events</a></p>
 				</div>
 				
 				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such 
 				an event then <a href="/contact" class="paragraph_link">contact</a> the webmaster to have it added.</p>
+			-->
+
 			<!--</div>-->
 		
 		</div>	
@@ -87,7 +81,7 @@
 			
 			<!--<div class="event_window_small_border">-->
 			
-			<hr>
+			<!--<hr>-->
 			
 			<div class="event_window_small">
 				<div class="event_window_content">
@@ -112,7 +106,7 @@
 									<table>
 										<tr>
 											<td style="width:92%"><p class="sidebar_text">{{ event.event_info | truncatechars:100 }}</p></td>
-											<td><p><a href="{% url 'event_detail' pk=event.pk %}" style="text-decoration:none">[...]</a></p></td>
+											<!--<td><p><a href="{% url 'event_detail' pk=event.pk %}" style="text-decoration:none">[...]</a></p></td>-->
 										</tr>
 									</table>
 								</td>
@@ -128,7 +122,7 @@
 				</div>
 			</div>	
 			<!--</div>-->
-			<hr>
+			<!--<hr>-->
 			
 			<!--SCROLL ARROW HERE<img src="{% static 'pages/images/arrow_down.png' %}" style="width:15px;display:block;margin:auto;padding-top:10px" id="scroll_down_small">-->
 			
@@ -138,7 +132,7 @@
 				<a href="/news" style="text-decoration:none"><h3 class="side_title">NEWS</h3></a>
 			</div>
 			
-			<hr>
+			<!--<hr>-->
 			
 			<!--<br>-->
 			
@@ -164,20 +158,20 @@
 				
 				<table>
 					<td style="width:100%"><p class="sidebar_text">{{ news.info | truncatechars:200 }}</p></td>
-					<td style="vertical-align:bottom"><p><a href="/news" style="text-decoration:none">[...]</a></p></td>
+					<!--<td style="vertical-align:bottom"><p><a href="/news" style="text-decoration:none">[...]</a></p></td>-->
 				</table>
 			
 		{% endfor %}
 		
-		<hr>
+		<!--<hr>-->
 		
 		</div>
+		
+		<!--
 		<div class="content gallery">
 			<div class="side_title_backing">
 				<a href="/gallery" style="text-decoration:none"><h3 class="side_title">GALLERY</h3></a>
 			</div>
-			
-			<hr>
 			
 			<p class="sidebar_text">On these pages are plenty of images of RockSoc for your viewing pleasure. If you have images
 			you feel should be uploaded please <a href="/contact" class="paragraph_link">contact</a> the
@@ -189,9 +183,8 @@
 			
 			<p class="sidebar_text">Hey</p>
 			
-			<hr>
-			
 		</div>
+		-->
 	</div>
 	
 	
