Some formatting changes on index

--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -41,6 +41,10 @@
 			
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
+			<!--<p>This is the official webpage of RockSoc, the Cambridge University society for all rock, metal, punk and alternative fans. We organise
+			termly events such as meet-ups, pub crawls, gigs and club nights. RockSoc is a great way of meeting like-minded rock and metal 
+			people in Cambridge!</p>-->
+			
 			
 			
 			<!--<div class="mobile_hide_600">-->
