--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -562,8 +562,10 @@ individual sections separately. For mobile there is padding since the individual
 	.welcome {
 		grid-column: 1 / 2;
 		-ms-grid-column: 1;
-		grid-row: 1 / 4;
-		-ms-grid-row-span: 3;
+		/*grid-row: 1 / 4;
+		-ms-grid-row-span: 3;*/
+		grid-row: 1 / 3;
+		-ms-grid-row-span: 2;
 		padding-left: 6%;
 		padding-right: 6%;
 		padding-top: 3%;
@@ -576,8 +578,10 @@ individual sections separately. For mobile there is padding since the individual
 	.welcome {
 			grid-column: 1 / 2;
 			-ms-grid-column: 1;
-			grid-row: 1 / 3;
-			-ms-grid-row-span: 3;
+			/*grid-row: 1 / 3;
+			-ms-grid-row-span: 3;*/
+			grid-row: 1 / 2;
+			-ms-grid-row-span: 2;
 			padding-left: 6%;
 			padding-right: 6%;
 			padding-top: 3%;
@@ -606,7 +610,7 @@ individual sections separately. For mobile there is padding since the individual
 		padding-bottom: 3%;
 	}
 	
-	.gallery {
+	/*.gallery {
 		grid-column: 2;
 		-ms-grid-column: 2;
 		grid-row: 3;
@@ -615,7 +619,7 @@ individual sections separately. For mobile there is padding since the individual
 		padding-right: 8%;
 		padding-top: 3%;
 		padding-bottom: 3%;
-	}
+	}*/
 }
 
 /*Contains main page content (as well?)*/
