--- a/website/pages/templates/pages/about.html
+++ b/website/pages/templates/pages/about.html
@@ -10,9 +10,15 @@
 				<h1 class="page_title">ABOUT</h1>
 			</div>
 			
-			<div class="mobile_hide_800">
+			<!--<div class="mobile_hide_800">
 				<img class="about_img" src="{% static 'pages/images/robfest.jpg' %}" align="right">
-			</div>
+			</div>-->
+			
+			<a href="{% static 'pages/images/robfest.jpg' %}" data-lightbox="about1" data-title="Much merriment at the Robinson Beer Festival">
+				<div>
+					<img src="{% static 'pages/images/robfest.jpg' %}" class="about_img hover-shadow" align="right">
+				</div>
+			</a>
 			
 			<h3>What is Cambridge RockSoc?</h3>
 			<p>RockSoc is Cambridge's rock, metal, and alternative society!</p>
@@ -27,20 +33,29 @@
 			
 			<h3>What music do we cover?</h3>
 			<p>Our music tastes evolve with our members, but we try to cater for alternative music not covered elsewhere in Cambridge. The spectrum of interests in RockSoc ranges 
-			from <i>Grunge</i> to <i>Alternative</i> to <i>Classic Metal</i> to <i>70s Rock</i> to <i>Death</i> and <i>Black Metal</i> to <i>Hardcore</i> to <i>Punk</i> to 
-			<i>Grindcore</i> to <i>Goth</i> to <i>Industrial</i> and takes in a good few others along the way, so the chances are that whatever you like there'll be someone in 
+			from <i>Grunge</i> to <i>Alternative</i> to <i>Classic Metal</i> to <i>70s Rock</i> to <i>Death</i> and <i>Black Metal</i> to <i>Hardcore</i> to <i>Punk</i> 
+			to <i>Goth</i> to <i>Industrial</i> and takes in a good few others along the way, so the chances are that whatever you like there'll be someone in 
 			RockSoc who agrees with you!</p>
 			
 			<h3>Who can join?</h3>
 			<p>Anyone can join and take advantage of what we offer. We are officially a Cambridge University society, but this has no bearing on our members; if it did we would 
 			go independent!</p>
 			
+			<!--<img class="about_img_2" src="{% static 'pages/images/Serrabulho 2017 (2).jpg' %}" align="left">-->
+			
+			<a href="{% static 'pages/images/Serrabulho 2017 (2).jpg' %}" data-lightbox="about2" data-title="View from the balcony at the 'Serrabulho' gig. On stage: 'Triangle 
+			Face'. In this image: at least two members of the band 'Raised by Owls'; a person in a nightie playing the keyboard; and one very drunk man from Southend. See if you can spot them all.">
+				<div>
+					<img src="{% static 'pages/images/Serrabulho 2017 (2).jpg' %}" class="about_img_2 hover-shadow" align="left">
+				</div>
+			</a>
+			
 			<h3>How can I join?</h3>
 			<p>Joining is cheap and easy. Membership is £5 for life and gets you the following benefits:</p>
 			
 			<ul style="color:gray;list-style-type:disc">
 				<li>cheaper entry to Wake Up Screaming (£3 instead of £4)</li>
-				<li>cheaper entry to all of our gigs (typically £1 off)</li>
+				<li>cheaper entry to all RockSoc gigs (typically £1 off)</li>
 				<li>a vote at the RockSoc AGM</li>
 				<li>reduced prices at other rock-related events in Cambridge where we can arrange it</li>
 				<li>your very own RockSoc membership card, making you the envy of all your friends!</li>
