--- a/website/pages/templates/pages/event_detail.html
+++ b/website/pages/templates/pages/event_detail.html
@@ -48,7 +48,7 @@
 							</div>
 							</div>-->
 							
-							<a href="{{ event.event_image.url }}" data-lightbox="mygallery">
+							<a href="{{ event.event_image.url }}" data-lightbox="event" data-title="{{ event.image_caption }}">
 								<div>
 									<img src="{{ event.event_image.url }}" class="event_img_big hover-shadow" align="right">
 								</div>
