--- a/website/pages/templates/pages/events.html
+++ b/website/pages/templates/pages/events.html
@@ -19,19 +19,19 @@
 				
 				<p>Below are listings of all alternative events we know about in Cambridge. If you know of an event not on this list, or are organising one, then 
 				<a href="/contact" class="paragraph_link">contact</a> the webmaster to have it added.</p>
-				<p>Scroll down to see more events. </p> <!--Official RockSoc events are labeled.</p>-->
-			
+				<!--<p>Scroll down to see more events. </p> Official RockSoc events are labeled.</p>-->
+				<br>
 				<!--<p class="sidebar_text" align="center"><img src="{% static 'pages/images/arrow_up.png' %}" style="width:20px" id="scroll_up"></p>-->
 			
 				
-				<img src="{% static 'pages/images/arrow_up.png' %}" style="width:20px;display:block;margin:auto;padding-bottom:10px" id="scroll_up">
+				<!--<img src="{% static 'pages/images/arrow_up.png' %}" style="width:20px;display:block;margin:auto;padding-bottom:10px" id="scroll_up">-->
 				
 				
 				<!--<hr>-->
 				<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
 				
-			<div class="event_window">
-				<div class="event_window_content">
+			<!--<div class="event_window">-->
+				<!--<div class="event_window_content">-->
 			
 				<div class="mobile_hide_1100">
 			
@@ -75,7 +75,8 @@
 						</table>
 			
 						{% if forloop.last == False %}
-							<hr style="border-color:rgb(100,100,100);border-style:solid">
+							<!--<hr style="border-color:rgb(100,100,100);border-style:solid">-->
+							<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
 						{% endif %}
 				
 					{% endfor %}
@@ -190,15 +191,15 @@
 				</div>
 				
 				
-				</div>
-			</div>
+				<!--</div>-->
+			<!--</div>-->
 			
 			<br>
 			
 			<!--<hr>-->
 			<img src="{% static 'pages/images/horizontal_divider.png' %}" style="width:100%">
 			
-			<img src="{% static 'pages/images/arrow_down.png' %}" style="width:20px;display:block;margin:auto;padding-top:10px" id="scroll_down">
+			<!--<img src="{% static 'pages/images/arrow_down.png' %}" style="width:20px;display:block;margin:auto;padding-top:10px" id="scroll_down">-->
 			
 			<!--<p class="sidebar_text" align="center"><img src="{% static 'pages/images/arrow_down.png' %}" style="width:20px" id="scroll_down"></p>-->
 			<!--<br><br>Scroll in the above window to see more events</p>-->
