--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -36,8 +36,8 @@
 			</div>-->
 			
 			<p>This is the official webpage of RockSoc, the Cambridge University society for all rock, metal, punk and alternative fans. We organise
-			termly events such as meet-ups, pub crawls, gigs and club nights. RockSoc is a great way of meeting like-minded rock and metal 
-			people in Cambridge!<br></p>
+			termly <a href="/events" class="paragraph_link">events</a> such as meet-ups, pub crawls, gigs and <a href="/wus" class="paragraph_link">club nights</a>. RockSoc is a great way of 
+			meeting like-minded rock and metal people in Cambridge!<br></p>
 			
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
@@ -102,6 +102,7 @@
 									</div>
 								</td>
 							</tr>
+							
 							<tr>
 								<td><h5>{{ event.date | date:"D jS F Y" }}<br>{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}<br>@ {{ event.event_location }}</h5></td>
 							</tr>
@@ -190,6 +191,7 @@
 		</div>
 		-->
 	</div>
+	
 	
 	
 	
